--- a/thesis/Implementation.lyx
+++ b/thesis/Implementation.lyx
@@ -7991,7 +7991,16 @@ Conclusion
 \end_layout
 
 \begin_layout Standard
+\begin_inset Note Comment
+status open
+
+\begin_layout Plain Layout
 [enrich]
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
